# OOP_class

PowerPoint/: CMakeLists.txt  commandbuilder.cpp  commandbuilder.h  main.cpp
PowerPoint/actions/: addremoveaction.cpp  addremoveaction.h  changeaction.cpp  changeaction.h  commandaction.h
PowerPoint/builders/: addcommandbuilder.cpp  addcommandbuilder.h  changecommandbuilder.cpp  changecommandbuilder.h  commandbuilder.h  commanddirector.cpp  commanddirector.h  displaycommandbuilder.cpp  displaycommandbuilder.h  exitcommandbuilder.cpp  exitcommandbuilder.h  removecommandbuilder.cpp  removecommandbuilder.h
PowerPoint/commandHistory/: commandhistory.cpp  commandhistory.h  stackcommandhistory.cpp  stackcommandhistory.h
PowerPoint/commandbuilders/: addcommandbuilder.cpp  addcommandbuilder.h  changecommandbuilder.cpp  changecommandbuilder.h  commandbuilder.h  commanddirector.cpp  commanddirector.h  displaycommandbuilder.cpp  displaycommandbuilder.h  exitcommandbuilder.h  removecommandbuilder.cpp  removecommandbuilder.h
PowerPoint/commands/: addcommand.cpp  addcommand.h  changecommand.cpp  changecommand.h  command.h  displaycommand.cpp  displaycommand.h  drawcommand.cpp  drawcommand.h  exitcommand.cpp  exitcommand.h  removecommand.cpp  removecommand.h  savecommand.cpp  savecommand.h
PowerPoint/controller/: controller.cpp  controller.h
PowerPoint/document/: container.h  coord.h  document.cpp  document.h  documentmanager.cpp  documentmanager.h  item.cpp  item.h  slide.cpp  slide.h  target.h
PowerPoint/factory/: commandbuilderfactory.cpp  commandbuilderfactory.h  commandfactory.cpp  commandfactory.h  itembuilderfactory.cpp  itembuilderfactory.h  itemfactory.cpp  itemfactory.h
PowerPoint/input_handler/: userinputhandler.cpp  userinputhandler.h
PowerPoint/itembuilders/: circlebuilder.cpp  circlebuilder.h  elipsebuilder.cpp  elipsebuilder.h  itembuilder.h  itemdirector.cpp  itemdirector.h  linebuilder.cpp  linebuilder.h  rectanglebuilder.cpp  rectanglebuilder.h  trianglebuilder.cpp  trianglebuilder.h
PowerPoint/items/: circle.cpp  circle.h  coord.cpp  elipse.cpp  elipse.h  item.cpp  item.h  line.cpp  line.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
PowerPoint/parser/: commandparser.cpp  commandparser.h  lexer.cpp  lexer.h
PowerPoint/serializer/: serializer.cpp  serializer.h
PowerPoint/user_interface/: application_window.cpp  application_window.h  draggableitemhandler.cpp  draggableitemhandler.h  itemdrawer.cpp  itemdrawer.h  itemrenderer.cpp  itemrenderer.h  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  uicomponent.h
PowerPoint/validator/: validator.cpp  validator.h
SlideShowApp/: CMakeLists.txt  main.cpp
SlideShowApp/ActionHandler/ActionManager/: actionmanager.cpp  actionmanager.h
SlideShowApp/ActionHandler/Actions/: additemaction.cpp  additemaction.h  addslideaction.cpp  addslideaction.h  changeaction.cpp  changeaction.h  commandaction.h  removeitemaction.cpp  removeitemaction.h  removeslideaction.cpp  removeslideaction.h
SlideShowApp/Application/: application.cpp  application.h
SlideShowApp/CommandLineInterface/CommandFactory/: commandfactory.cpp  commandfactory.h
SlideShowApp/CommandLineInterface/CommandParser/: commandparser.cpp  commandparser.h  lexer.cpp  lexer.h
SlideShowApp/CommandLineInterface/Commands/: addcommand.cpp  addcommand.h  changecommand.cpp  changecommand.h  command.h  displaycommand.cpp  displaycommand.h  drawcommand.cpp  drawcommand.h  exitcommand.cpp  exitcommand.h  removecommand.cpp  removecommand.h  savecommand.cpp  savecommand.h
SlideShowApp/CommandLineInterface/Controller/: controller.cpp  controller.h
SlideShowApp/Director/ActionManager/: actionmanager.h
SlideShowApp/Director/Actions/: addaction.cpp  addaction.h  changeaction.cpp  changeaction.h  commandaction.h  removeaction.cpp  removeaction.h
SlideShowApp/PresentationElements/: container.h  document.cpp  document.h  slide.cpp  slide.h  target.h
SlideShowApp/PresentationElements/Item/: coord.cpp  coord.h  item.cpp  item.h  rectangle.cpp  rectangle.h  rectanglegeometry.cpp  rectanglegeometry.h
SlideShowApp/Renderer/: renderer.cpp  renderer.h
SlideShowApp/Renderer/Shapes/: Shape.h  circle.cpp  circle.h  elipse.cpp  elipse.h  line.cpp  line.h  rectangle.cpp  rectangle.h
SlideShowApp/Serializer/: serializer.cpp  serializer.h
SlideShowApp/UserInterface/: applicationwindow.cpp  applicationwindow.h  applicationwindow.ui  commandlineinputbox.cpp  commandlineinputbox.h  commandlineoutputlog.cpp  commandlineoutputlog.h  commandlineoutputterminal.cpp  commandlineoutputterminal.h
parser/: AdditionOperation.hpp  Command.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandParser.cpp  CommandParser.hpp  Controller.cpp  Controller.hpp  DivisionOperation.hpp  MultiplicationOperation.hpp  Operation.hpp  OperationFactory.cpp  OperationFactory.hpp  OutputHandler.hpp  PowOperation.hpp  README.md  SqrtOperation.hpp  SubtractionOperation.hpp  main  main.cpp
parser/command_parser/: CommandParser.cpp  CommandParser.hpp
parser/commands/: Command.hpp  CommandHistory.cpp  CommandHistory.hpp
parser/controller/: Controller.cpp  Controller.hpp
parser/executor/: CommandExecutor.cpp  CommandExecutor.hpp
parser/factory/: OperationFactory.cpp  OperationFactory.hpp
parser/operations/: AdditionOperation.hpp  DivisionOperation.hpp  MultiplicationOperation.hpp  Operation.hpp  PowOperation.hpp  SqrtOperation.hpp  SubtractionOperation.hpp
